--- a/debian/sane-utils.saned@.service
+++ b/debian/sane-utils.saned@.service
@@ -6,7 +6,11 @@ Requires=saned.socket
 ExecStart=/usr/sbin/saned
 User=saned
 Group=saned
-StandardInput=null
+StandardInput=socket
 StandardOutput=syslog
 StandardError=syslog
+Environment=SANE_CONFIG_DIR=/etc/sane.d
 # Environment=SANE_CONFIG_DIR=/etc/sane.d SANE_DEBUG_DLL=255
+
+[Install]
+Also=saned.socket
