--- a/debian/rules
+++ b/debian/rules
@@ -26,6 +26,8 @@ ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
 	STRIP = ""
 endif
 
+VERSION = $(shell head -n1 debian/changelog | sed -e 's/.*(//;s/-.*).*//;s/\+/\-/')
+
 %:
 	dh $@ --parallel --with autotools_dev,systemd
 
@@ -137,5 +139,5 @@ override_dh_builddeb:
 	dh_builddeb -- -Zxz
 
 override_dh_makeshlibs:
-	dpkg-gensymbols -plibsane
+	dpkg-gensymbols -v$(VERSION) -plibsane
 	dh_makeshlibs
