--- a/debian/rules
+++ b/debian/rules
@@ -48,7 +48,8 @@ override_dh_auto_configure:
 		--with-gphoto2 \
 		--enable-translations \
 		--enable-avahi \
-		--enable-libusb_1_0
+		--enable-libusb_1_0 \
+		--enable-pnm-backend
 
 override_dh_auto_build:
 	# generate POT file for translators
