--- a/debian/control
+++ b/debian/control
@@ -25,6 +25,7 @@ Build-Depends:
  texlive,
  texlive-latex-extra,
  xutils-dev
+Testsuite: autopkgtest
 Homepage: http://www.sane-project.org
 Vcs-Git: git://anonscm.debian.org/collab-maint/sane-backends.git
 Vcs-Browser: http://anonscm.debian.org/cgit/collab-maint/sane-backends.git
