--- a/debian/rules
+++ b/debian/rules
@@ -137,6 +137,7 @@ override_dh_systemd_enable:
 override_dh_strip:
 	dh_strip --dbg-package=libsane-dbg
 
+UPSTREAM_VERSION=$(shell dpkg-parsechangelog | sed -n '/\(Version:\)/{s/^Version:[[:space:]]\+\([0-9]\+:\)\?\(.*\)/\2/p}' | rev | cut -d- -f 2- | rev)
+
 override_dh_makeshlibs:
-	dpkg-gensymbols -v$(VERSION) -plibsane
-	dh_makeshlibs
+	dh_makeshlibs -- -c0 -v$(UPSTREAM_VERSION) -Pdebian/libsane -plibsane
