--- a/backend/genesys.conf.in
+++ b/backend/genesys.conf.in
@@ -60,6 +60,12 @@ usb 0x04a9 0x1907
 # Canon LiDE 210
 usb 0x04a9 0x190a
 
+# Canon LiDE 120
+usb 0x04a9 0x190e
+
+# Canon LiDE 220
+usb 0x04a9 0x190f
+
 # Canon 5600f
 usb 0x04a9 0x1906
 
