--- a/configure.in
+++ b/configure.in
@@ -610,7 +610,7 @@ AC_ARG_ENABLE(local-backends,
 ALL_BACKENDS="abaton agfafocus apple artec artec_eplus48u as6e \
         avision bh canon canon630u canon_dr canon_pp cardscan \
         coolscan coolscan2 coolscan3 dc25 dc210 dc240 \
-        dell1600n_net dmc epjitsu epson epson2 fujitsu genesys \
+        dell1600n_net dmc epjitsu epson epson2 epsonds fujitsu genesys \
         gphoto2 gt68xx hp hp3500 hp3900 hp4200 hp5400 \
         hp5590 hpsj5s hpljm1005 hs2p ibm kodak kodakaio kvs1025 kvs20xx \
         kvs40xx leo lexmark ma1509 magicolor \
