--- a/debian/rules
+++ b/debian/rules
@@ -49,7 +49,9 @@ override_dh_auto_configure:
 		--with-gphoto2 \
 		--enable-translations \
 		--enable-avahi \
-		--enable-libusb_1_0
+		--enable-libusb_1_0 \
+		--enable-pnm-backend \
+		--without-v4l
 
 override_dh_auto_build:
 	# generate POT file for translators
@@ -136,9 +138,5 @@ override_dh_systemd_enable:
 override_dh_strip:
 	dh_strip --dbg-package=libsane-dbg
 
-override_dh_builddeb:
-	dh_builddeb -- -Zxz
-
 override_dh_makeshlibs:
-	dpkg-gensymbols -v$(VERSION) -plibsane
-	dh_makeshlibs
+	dh_makeshlibs -- -c0 -v$(VERSION) -Pdebian/libsane -plibsane
