--- a/debian/control
+++ b/debian/control
@@ -11,13 +11,14 @@ Build-Depends:
  dh-systemd,
  gettext,
  libavahi-client-dev,
+ libcam-dev [kfreebsd-any],
  libgphoto2-dev,
- libieee1284-3-dev,
+ libieee1284-3-dev [!hurd-i386],
  libjpeg-dev,
  libltdl3-dev,
- libsystemd-dev,
+ libsystemd-dev [linux-any],
  libtiff-dev,
- libusb-1.0-0-dev,
+ libusb-1.0-0-dev [!hurd-i386],
  pkg-config,
  po-debconf,
  texlive,
@@ -76,10 +77,10 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends:
- acl,
+ acl [linux-any],
  adduser,
  libsane-common (= ${source:Version}),
- udev | makedev,
+ udev [linux-any] | makedev [linux-any],
  ${misc:Depends},
  ${shlibs:Depends}
 Recommends: libsane-extras, sane-utils (>= ${binary:Version})
@@ -107,12 +108,13 @@ Section: libdevel
 Architecture: any
 Depends:
  libavahi-client-dev,
+ libcam-dev [kfreebsd-any],
  libgphoto2-dev,
- libieee1284-3-dev,
+ libieee1284-3-dev [!hurd-i386],
  libjpeg-dev,
  libsane (= ${binary:Version}),
  libtiff-dev,
- libusb-1.0-0-dev,
+ libusb-1.0-0-dev [!hurd-i386],
  pkg-config,
  ${misc:Depends}
 Recommends: libsane-extras-dev
