Enable net snmp and autodetect network scanners in kodakaio

--- a/debian/control
+++ b/debian/control
@@ -12,10 +12,12 @@ Build-Depends:
  gettext,
  libavahi-client-dev,
  libcam-dev [kfreebsd-any],
+ libcups2-dev,
  libgphoto2-dev,
  libieee1284-3-dev [!hurd-i386],
  libjpeg-dev,
  libltdl3-dev,
+ libsnmp-dev,
  libsystemd-dev [linux-any],
  libtiff-dev,
  libusb-1.0-0-dev [!hurd-i386],
