--- a/debian/control
+++ b/debian/control
@@ -58,6 +58,8 @@ Package: libsane-common
 Section: libs
 Architecture: all
 Multi-Arch: foreign
+Pre-Depends:
+ dpkg (>= 1.15.7.2)
 Depends: ${misc:Depends}
 Description: API library for scanners -- documentation and support files
  SANE stands for "Scanner Access Now Easy" and is an application
