Add Multi-Arch: same to package libsane-dev

--- a/debian/control
+++ b/debian/control
@@ -110,6 +110,7 @@ Description: API library for scanners
 Package: libsane-dev
 Section: libdevel
 Architecture: any
+Multi-Arch: same
 Depends:
  libsane (= ${binary:Version}),
  ${misc:Depends}
