--- a/debian/rules
+++ b/debian/rules
@@ -139,4 +139,4 @@ override_dh_strip:
 UPSTREAM_VERSION=$(shell dpkg-parsechangelog | sed -n '/\(Version:\)/{s/^Version:[[:space:]]\+\([0-9]\+:\)\?\(.*\)/\2/p}' | rev | cut -d- -f 2- | rev)
 
 override_dh_makeshlibs:
-	dh_makeshlibs -- -c0 -v$(UPSTREAM_VERSION) -Pdebian/libsane -plibsane
+	dh_makeshlibs -- -v$(UPSTREAM_VERSION) -Pdebian/libsane -plibsane
