--- a/backend/genesys.conf.in
+++ b/backend/genesys.conf.in
@@ -2,7 +2,7 @@
 
 #
 # scanners that are not yet supported
-# uncomment them only for developpment purpose
+# uncomment them only for development purpose
 #
 
 # UMAX Astra 4500 and Avision iVina 1600
