--- a/testsuite/sanei/Makefile.in
+++ b/testsuite/sanei/Makefile.in
@@ -77,7 +77,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-check_PROGRAMS = sanei_usb_test$(EXEEXT) test_wire$(EXEEXT) \
+check_PROGRAMS = test_wire$(EXEEXT) \
 	sanei_check_test$(EXEEXT) sanei_config_test$(EXEEXT) \
 	sanei_constrain_test$(EXEEXT)
 subdir = testsuite/sanei
