--- a/debian/control
+++ b/debian/control
@@ -27,8 +27,8 @@ Build-Depends:
  xutils-dev
 Testsuite: autopkgtest
 Homepage: http://www.sane-project.org
-Vcs-Git: git://anonscm.debian.org/collab-maint/sane-backends.git
-Vcs-Browser: http://anonscm.debian.org/cgit/collab-maint/sane-backends.git
+Vcs-Git: https://anonscm.debian.org/collab-maint/sane-backends.git
+Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/sane-backends.git
 
 Package: sane-utils
 Architecture: any
