--- a/debian/rules
+++ b/debian/rules
@@ -93,8 +93,8 @@ override_dh_install-arch:
 override_dh_installdocs-indep:
 	dh_installdocs
 	# move files that belong to libsane-dev
-#	mv debian/tmp/usr/share/doc/libsane/sane.ps debian/libsane-dev/usr/share/doc/libsane-dev/
-#	mv debian/tmp/usr/share/doc/libsane/backend-writing.txt debian/libsane-dev/usr/share/doc/libsane-dev/
+	mv debian/tmp/usr/share/doc/libsane/sane.ps debian/libsane-dev/usr/share/doc/libsane-dev/
+	mv debian/tmp/usr/share/doc/libsane/backend-writing.txt debian/libsane-dev/usr/share/doc/libsane-dev/
 	# Platform-specific documentation
 	# move the html files into html/
 	install -d debian/libsane-common/usr/share/doc/libsane/html
