Add requested lsb-base on sane-utils Depends

--- a/debian/control
+++ b/debian/control
@@ -35,6 +35,7 @@ Architecture: any
 Multi-Arch: foreign
 Depends:
  adduser,
+ lsb-base (>= 3.0-6),
  update-inetd,
  ${misc:Depends},
  ${shlibs:Depends}
