--- a/debian/control
+++ b/debian/control
@@ -78,6 +78,8 @@ Package: libsane1
 Section: libs
 Architecture: any
 Multi-Arch: same
+Breaks: libsane (<<1.0.27-1)
+Replaces: libsane (<<1.0.27-1)
 Pre-Depends: ${misc:Pre-Depends}
 Depends:
  acl [linux-any],
