Remove [!hurd-i386] from B-D libusb-1.0-0-dev

--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends:
  libltdl3-dev,
  libsystemd-dev [linux-any],
  libtiff-dev,
- libusb-1.0-0-dev [!hurd-i386],
+ libusb-1.0-0-dev,
  pkg-config,
  po-debconf,
  texlive,
