--- a/debian/rules
+++ b/debian/rules
@@ -90,11 +90,14 @@ override_dh_install-indep:
 
 override_dh_installman-indep:
 	dh_installman
+	# remove man files from package sane-utils
 	$(RM) $(CURDIR)/debian/libsane-common/usr/share/man/man1/gamma4scanimage.1
 	$(RM) $(CURDIR)/debian/libsane-common/usr/share/man/man1/sane-find-scanner.1
 	$(RM) $(CURDIR)/debian/libsane-common/usr/share/man/man1/scanimage.1
 	$(RM) $(CURDIR)/debian/libsane-common/usr/share/man/man5/sane-umax_pp.5
 	$(RM) $(CURDIR)/debian/libsane-common/usr/share/man/man8/saned.8
+        # remove manpages for not build libs
+	$(RM) $(CURDIR)/debian/libsane-common/usr/share/man/man5/sane-v4l.5
 
 override_dh_installdocs-arch:
 	dh_installdocs
