--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Build-Depends:
  libieee1284-3-dev [!hurd-i386],
  libjpeg-dev,
  libltdl3-dev,
+ libsnmp-dev,
  libsystemd-dev [linux-any],
  libtiff-dev,
  libusb-1.0-0-dev,
